# scout-otel

./: .gitignore  README.md  TODO.md  pyproject.toml
docs/: api.md  walkthrough.md
examples/simple-case/: README.md  TODO.md  pyproject.toml  scanner.py
examples/simple-case/src/simple_case/: _context.py  case_inspect.py  case_langchain.py  case_openai.py  main.py
examples/texas-holdem/: README.md  TODO.md  pyproject.toml
examples/texas-holdem/src/texas_holdem/: config.py  game.py  logging.py  main.py  player.py  player_anthropic.py  player_langchain.py  player_openai.py  player_pydantic_ai.py
examples/texas-holdem/tables/: anthropic.toml  friday-night.toml  heads-up.toml  langchain.toml  openai.toml  pydantic.toml
src/scout_otel/: __init__.py  agent_task.py  tracing.py  transcript.py
src/scout_otel/cli/: __init__.py  _common.py  _highlight.py  main.py  spans.py  transcripts.py
tests/: test_agent_task.py  test_import_latency.py  test_transcript.py
